# amgeo-professional

./: README.md
amgeo-professional/: README.md  docker-compose.yml  pyproject.toml
amgeo-professional/config/development/: settings.yaml
amgeo-professional/config/production/: settings.yaml.template
amgeo-professional/config/testing/: settings.yaml
amgeo-professional/docker/development/: Dockerfile.api  Dockerfile.base  Dockerfile.jupyter  Dockerfile.streamlit
amgeo-professional/scripts/: dev.sh
amgeo-professional/scripts/setup/: install_dependencies.sh  setup_database.sh
amgeo-professional/src/amgeo/config/: __init__.py  settings.py
amgeo-professional/src/amgeo/core/: __init__.py  inversion.py  validation.py
amgeo-professional/src/amgeo/ml/: __init__.py  classifier.py
amgeo-professional/src/amgeo/visualization/: __init__.py  classifier.py  plotting.py
amgeo-professional/streamlit_app/: app.py
amgeo-professional/streamlit_app/pages/: 1_Data_Upload_Validation.py  2_Geophysical_Inversion.py  3_ML_Aquifer_Classification.py
amgeo-professional/tests/: conftest.py
