[project]
name = "amgeo-professional"
version = "0.1.0"
description = "Professional Groundwater Exploration Suite"
authors = [
    {name = "AM",email = "anonmomentum@proton.me"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "streamlit (>=1.49.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "h5py (>=3.14.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.8.0"
pytest-mock = "^3.15.0"
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.18.1"
pre-commit = "^4.3.0"
jupyter = "^1.1.1"
ipython = "^9.5.0"
notebook = "^7.4.5"
jupyterlab = "^4.4.7"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.20"
types-pyyaml = "^6.0.12.20250915"

[tool.poetry.dependencies]
numpy = "^2.2.6"
numba = "^0.61.2"

[[tool.poetry.packages]]
include = "src/amgeo"


